--- a/.gitignore
+++ b/.gitignore
@@ -73,4 +73,6 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+HeuristicOptimization/.idea/workspace.xml
+
 # End Jetbrains IDE specific stuff
