Deterministic and random initial construction in main. some cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ fabric.properties
 HeuristicOptimization/.idea/workspace.xml
 
 # End Jetbrains IDE specific stuff
+HeuristicOptimization/.idea/workspace.xml___jb_tmp___
